qdl-plugins-pornhubsearch (0.0.2) unstable; urgency=low

  * Changes to plugin search API.

 -- Stuart Howarth <showarth@marxoft.co.uk>  Mon, 13 Nov 2017 02:33:16 +0000

qdl-plugins-pornhubsearch (0.0.1) unstable; urgency=low

  * Inital release.

 -- Stuart Howarth <showarth@marxoft.co.uk>  Mon, 13 Feb 2017 22:44:04 +0000