@@ -1,8 +1,9 @@
 qdl-plugins-pornhubsearch (0.0.2) unstable; urgency=low
 
+  * Use mobile site to retrive search results.
   * Changes to plugin search API.
 
- -- Stuart Howarth <showarth@marxoft.co.uk>  Mon, 13 Nov 2017 02:33:16 +0000
+ -- Stuart Howarth <showarth@marxoft.co.uk>  Thu, 23 Nov 2017 00:38:16 +0000
 
 qdl-plugins-pornhubsearch (0.0.1) unstable; urgency=low
 
